batch-mode/language-model-batch-workflow-derive/tests/trybuild/fail_missing_error_type.stderr
error: Missing required `#[batch_error_type(...)]` attribute on the struct.
 --> tests/trybuild/fail_missing_error_type.rs:9:8
  |
9 | struct MissingErrorType {
  |        ^^^^^^^^^^^^^^^^
